[package]
name = "atoi_simd_benchmark"
version = "0.0.0"
authors = ["Dmitry Rodionov <gh@rdmtr.com>"]
description = "Fast `&[u8]` to integer parser benchmark"
edition = "2021"
publish = false

[features]
full = []

[dependencies]
atoi_simd = { path = ".." }
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
lto = "fat"
codegen-units = 1
