[package]
name = "atoi_simd-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.atoi_simd]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "parse_u128"
path = "fuzz_targets/parse_u128.rs"
test = false
doc = false

[[bin]]
name = "parse_i128"
path = "fuzz_targets/parse_i128.rs"
test = false
doc = false

[[bin]]
name = "parse_u64"
path = "fuzz_targets/parse_u64.rs"
test = false
doc = false

[[bin]]
name = "parse_i64"
path = "fuzz_targets/parse_i64.rs"
test = false
doc = false

[[bin]]
name = "parse_u32"
path = "fuzz_targets/parse_u32.rs"
test = false
doc = false

[[bin]]
name = "parse_i32"
path = "fuzz_targets/parse_i32.rs"
test = false
doc = false

[[bin]]
name = "parse_u16"
path = "fuzz_targets/parse_u16.rs"
test = false
doc = false

[[bin]]
name = "parse_i16"
path = "fuzz_targets/parse_i16.rs"
test = false
doc = false

[[bin]]
name = "parse_u8"
path = "fuzz_targets/parse_u8.rs"
test = false
doc = false

[[bin]]
name = "parse_i8"
path = "fuzz_targets/parse_i8.rs"
test = false
doc = false

[[bin]]
name = "verify_u128"
path = "fuzz_targets/verify_u128.rs"
test = false
doc = false

[[bin]]
name = "verify_i128"
path = "fuzz_targets/verify_i128.rs"
test = false
doc = false

[[bin]]
name = "verify_u64"
path = "fuzz_targets/verify_u64.rs"
test = false
doc = false

[[bin]]
name = "verify_i64"
path = "fuzz_targets/verify_i64.rs"
test = false
doc = false

[[bin]]
name = "verify_u32"
path = "fuzz_targets/verify_u32.rs"
test = false
doc = false

[[bin]]
name = "verify_i32"
path = "fuzz_targets/verify_i32.rs"
test = false
doc = false